--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
     <h1>Welcome to git+html+css</h1>
     <h2>This is new feature</h2>
     <h3>Feature 3</h3>
+    <h4>Feature 4</h4>
   </body>
 </html>
